[package]
name = "parallel-evm"
version = "0.1.0"
authors = ["John Xiong <bear987978897@gmail.com>"]
edition = "2018"

[dependencies]
blooms-db = { path = "parity-ethereum/util/blooms-db" }
ethcore = { path = "parity-ethereum/ethcore", features = ["test-helpers"] }
ethcore-blockchain = { path = "parity-ethereum/ethcore/blockchain" }
kvdb = "0.1"
kvdb-rocksdb = "0.1.3"
rand = "0.6.5"
common-types = { path = "parity-ethereum/ethcore/types" }
ethereum-types = "0.4"
vm = { path = "parity-ethereum/ethcore/vm" }
ethstore = { path = "parity-ethereum/accounts/ethstore" }
rustc-hex = "2.0.1"
journaldb = { path = "parity-ethereum/util/journaldb"  }
ethcore-db = { path = "parity-ethereum/ethcore/db" }
env_logger = "0.6.1"
log = "0.4.6"
bincode = "1.1.3"
rustc-serialize = "0.3.24"
rlp = { version = "0.3.0", features = ["ethereum"] }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "no_dependency_no_contract"
harness = false
