[package]
name = "parallel-evm"
version = "0.1.0"
authors = ["John Xiong <bear987978897@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.1.3"
blooms-db = { path = "parity-ethereum/util/blooms-db" }
common-types = { path = "parity-ethereum/ethcore/types" }
crossbeam-channel = "0.3.8"
env_logger = "0.6.1"
ethcore = { path = "parity-ethereum/ethcore", features = ["test-helpers", "to-pod-full"] }
ethcore-blockchain = { path = "parity-ethereum/ethcore/blockchain" }
ethcore-db = { path = "parity-ethereum/ethcore/db" }
ethereum-types = "0.4"
ethjson = { path = "parity-ethereum/json" }
ethstore = { path = "parity-ethereum/accounts/ethstore" }
hashbrown = "0.5.0"
hex = "0.3.2"
journaldb = { path = "parity-ethereum/util/journaldb"  }
kvdb = "0.1"
kvdb-rocksdb = "0.1.3"
log = "0.4.6"
rand = "0.6.5"
rlp = { version = "0.3.0", features = ["ethereum"] }
rustc-hex = "2.0.1"
rustc-serialize = "0.3.24"
serde = "1.0.92"
serde_derive = "1"
serde_json = "1.0.39"
vm = { path = "parity-ethereum/ethcore/vm" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_main"
harness = false
